comment index.html

--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <title>Название проекта</title>
@@ -12,7 +13,9 @@
   <link rel="preload" href="fonts/montserrat-semibold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/montserrat-bold.woff2" as="font" type="font/woff2" crossorigin>
 </head>
+
 <body class="page__body">
+  <!--Drink2Go-->
   <header class="page__header header" id="header">
     <nav class="header__nav main-nav main-nav--nojs">
       <a class="main-nav__logo logo" href="#">
@@ -117,13 +120,18 @@
             </div>
             <div class="slide__image">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider/slide-1-desktop@1x.webp 1x, images/slider/slide-1-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/slide-1-tablet@1x.webp 1x, images/slider/slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="images/slider/slide-1-desktop@1x.webp 1x, images/slider/slide-1-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="images/slider/slide-1-tablet@1x.webp 1x, images/slider/slide-1-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="images/slider/slide-1@1x.webp 1x, images/slider/slide-1@2x.webp 2x">
 
-                <source media="(min-width: 1440px)" srcset="images/slider/slide-1-desktop@1x.png 1x, images/slider/slide-1-desktop@2x.png 2x">
-                <source media="(min-width: 768px)"  srcset="images/slider/slide-1-tablet@1x.png 1x, images/slider/slide-1-tablet@2x.png 2x">
-                <img src="images/slider/slide-1@1x.png" srcset="images/slider/slide-1@2x.png 2x" alt="кофе в фирменной упаковке">
+                <source media="(min-width: 1440px)"
+                  srcset="images/slider/slide-1-desktop@1x.png 1x, images/slider/slide-1-desktop@2x.png 2x">
+                <source media="(min-width: 768px)"
+                  srcset="images/slider/slide-1-tablet@1x.png 1x, images/slider/slide-1-tablet@2x.png 2x">
+                <img src="images/slider/slide-1@1x.png" srcset="images/slider/slide-1@2x.png 2x"
+                  alt="кофе в фирменной упаковке">
               </picture>
             </div>
           </li>
@@ -140,13 +148,18 @@
             </div>
             <div class="slide__image">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider/slide-2-desktop@1x.webp 1x, images/slider/slide-2-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/slide-2-tablet@1x.webp 1x, images/slider/slide-2-tablet@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="images/slider/slide-2-desktop@1x.webp 1x, images/slider/slide-2-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="images/slider/slide-2-tablet@1x.webp 1x, images/slider/slide-2-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="images/slider/slide-2@1x.webp 1x, images/slider/slide-2@2x.webp 2x">
 
-                <source media="(min-width: 1440px)" srcset="images/slider/slide-2-desktop@1x.png 1x, images/slider/slide-2-desktop@2x.png 2x">
-                <source media="(min-width: 768px)"  srcset="images/slider/slide-2-tablet@1x.png 1x, images/slider/slide-2-tablet@2x.png 2x">
-                <img src="images/slider/slide-2@1x.png" srcset="images/slider/slide-2@2x.png 2x" alt="кофе в фирменной упаковке">
+                <source media="(min-width: 1440px)"
+                  srcset="images/slider/slide-2-desktop@1x.png 1x, images/slider/slide-2-desktop@2x.png 2x">
+                <source media="(min-width: 768px)"
+                  srcset="images/slider/slide-2-tablet@1x.png 1x, images/slider/slide-2-tablet@2x.png 2x">
+                <img src="images/slider/slide-2@1x.png" srcset="images/slider/slide-2@2x.png 2x"
+                  alt="кофе в фирменной упаковке">
               </picture>
             </div>
           </li>
@@ -163,13 +176,18 @@
             </div>
             <div class="slide__image">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider/slide-3-desktop@1x.webp 1x, images/slider/slide-3-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/slide-3-tablet@1x.webp 1x, images/slider/slide-3-tablet@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1440px)"
+                  srcset="images/slider/slide-3-desktop@1x.webp 1x, images/slider/slide-3-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="images/slider/slide-3-tablet@1x.webp 1x, images/slider/slide-3-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="images/slider/slide-3@1x.webp 1x, images/slider/slide-3@2x.webp 2x">
 
-                <source media="(min-width: 1440px)" srcset="images/slider/slide-3-desktop@1x.png 1x, images/slider/slide-3-desktop@2x.png 2x">
-                <source media="(min-width: 768px)"  srcset="images/slider/slide-3-tablet@1x.png 1x, images/slider/slide-3-tablet@2x.png 2x">
-                <img src="images/slider/slide-3@1x.png" srcset="images/slider/slide-3@2x.png 2x" alt="кофе в фирменной упаковке">
+                <source media="(min-width: 1440px)"
+                  srcset="images/slider/slide-3-desktop@1x.png 1x, images/slider/slide-3-desktop@2x.png 2x">
+                <source media="(min-width: 768px)"
+                  srcset="images/slider/slide-3-tablet@1x.png 1x, images/slider/slide-3-tablet@2x.png 2x">
+                <img src="images/slider/slide-3@1x.png" srcset="images/slider/slide-3@2x.png 2x"
+                  alt="кофе в фирменной упаковке">
               </picture>
             </div>
           </li>
@@ -212,11 +230,11 @@
             <legend class="filter-group__heading">Цена</legend>
             <div class="filter-group__range range" id="slider"></div>
             <div class="filter-group__price-wrapper">
-              <input class="filter-group__price filter-group__price--min" type="number" name="price-min" id="price-min" min="0"
-                max="150" value="0">
+              <input class="filter-group__price filter-group__price--min" type="number" name="price-min" id="price-min"
+                min="0" max="150" value="0">
               <span>-</span>
-              <input class="filter-group__price filter-group__price--max" type="number" name="price-max" id="price-max" min="0"
-                max="150" value="123">
+              <input class="filter-group__price filter-group__price--max" type="number" name="price-max" id="price-max"
+                min="0" max="150" value="123">
             </div>
           </fieldset>
           <fieldset class="filter__group filter-group filter-group--milk">
@@ -309,8 +327,10 @@
         <div class="catalog__products card-list">
           <article class="card-list__item card">
             <picture>
-              <source type="image/webp" srcset="images/catalog/product-1@1x.webp 1x, images/catalog/product-1@2x.webp 2x">
-              <img class="card__image" src="images/catalog/product-1@1x.png" srcset="images/catalog/product-1@2x.png 2x" width="130" height="188" alt="кофе в фирменной упаковке">
+              <source type="image/webp"
+                srcset="images/catalog/product-1@1x.webp 1x, images/catalog/product-1@2x.webp 2x">
+              <img class="card__image" src="images/catalog/product-1@1x.png" srcset="images/catalog/product-1@2x.png 2x"
+                width="130" height="188" alt="кофе в фирменной упаковке">
             </picture>
             <h3 class="card__heading">Декаф Флэт Уайт</h3>
             <p class="card__text">Кофе без кофеина из Эфиопии<br>
@@ -322,8 +342,10 @@
           </article>
           <article class="card-list__item card">
             <picture>
-              <source type="image/webp" srcset="images/catalog/product-2@1x.webp 1x, images/catalog/product-2@2x.webp 2x">
-              <img class="card__image" src="images/catalog/product-2@1x.png" srcset="images/catalog/product-2@2x.png 2x" width="130" height="188" alt="кофе в фирменной упаковке">
+              <source type="image/webp"
+                srcset="images/catalog/product-2@1x.webp 1x, images/catalog/product-2@2x.webp 2x">
+              <img class="card__image" src="images/catalog/product-2@1x.png" srcset="images/catalog/product-2@2x.png 2x"
+                width="130" height="188" alt="кофе в фирменной упаковке">
             </picture>
             <h3 class="card__heading">Декаф Флэт Уайт</h3>
             <p class="card__text">Кофе без кофеина из Эфиопии<br>
@@ -335,8 +357,10 @@
           </article>
           <article class="card-list__item card">
             <picture>
-              <source type="image/webp" srcset="images/catalog/product-3@1x.webp 1x, images/catalog/product-3@2x.webp 2x">
-              <img class="card__image" src="images/catalog/product-3@1x.png" srcset="images/catalog/product-3@2x.png 2x" width="130" height="188" alt="кофе в фирменной упаковке">
+              <source type="image/webp"
+                srcset="images/catalog/product-3@1x.webp 1x, images/catalog/product-3@2x.webp 2x">
+              <img class="card__image" src="images/catalog/product-3@1x.png" srcset="images/catalog/product-3@2x.png 2x"
+                width="130" height="188" alt="кофе в фирменной упаковке">
             </picture>
             <h3 class="card__heading">Декаф Флэт Уайт</h3>
             <p class="card__text">Кофе без кофеина из Эфиопии<br>
@@ -348,8 +372,10 @@
           </article>
           <article class="card-list__item card">
             <picture>
-              <source type="image/webp" srcset="images/catalog/product-4@1x.webp 1x, images/catalog/product-4@2x.webp 2x">
-              <img class="card__image" src="images/catalog/product-4@1x.png" srcset="images/catalog/product-4@2x.png 2x" width="130" height="188" alt="кофе в фирменной упаковке">
+              <source type="image/webp"
+                srcset="images/catalog/product-4@1x.webp 1x, images/catalog/product-4@2x.webp 2x">
+              <img class="card__image" src="images/catalog/product-4@1x.png" srcset="images/catalog/product-4@2x.png 2x"
+                width="130" height="188" alt="кофе в фирменной упаковке">
             </picture>
             <h3 class="card__heading">Декаф Флэт Уайт</h3>
             <p class="card__text">Кофе без кофеина из Эфиопии<br>
@@ -361,8 +387,10 @@
           </article>
           <article class="card-list__item card">
             <picture>
-              <source type="image/webp" srcset="images/catalog/product-5@1x.webp 1x, images/catalog/product-5@2x.webp 2x">
-              <img class="card__image" src="images/catalog/product-5@1x.png" srcset="images/catalog/product-5@2x.png 2x" width="130" height="188" alt="кофе в фирменной упаковке">
+              <source type="image/webp"
+                srcset="images/catalog/product-5@1x.webp 1x, images/catalog/product-5@2x.webp 2x">
+              <img class="card__image" src="images/catalog/product-5@1x.png" srcset="images/catalog/product-5@2x.png 2x"
+                width="130" height="188" alt="кофе в фирменной упаковке">
             </picture>
             <h3 class="card__heading">Декаф Флэт Уайт</h3>
             <p class="card__text">Кофе без кофеина из Эфиопии<br>
@@ -374,8 +402,10 @@
           </article>
           <article class="card-list__item card">
             <picture>
-              <source type="image/webp" srcset="images/catalog/product-6@1x.webp 1x, images/catalog/product-6@2x.webp 2x">
-              <img class="card__image" src="images/catalog/product-6@1x.png" srcset="images/catalog/product-6@2x.png 2x" width="130" height="188" alt="кофе в фирменной упаковке">
+              <source type="image/webp"
+                srcset="images/catalog/product-6@1x.webp 1x, images/catalog/product-6@2x.webp 2x">
+              <img class="card__image" src="images/catalog/product-6@1x.png" srcset="images/catalog/product-6@2x.png 2x"
+                width="130" height="188" alt="кофе в фирменной упаковке">
             </picture>
             <h3 class="card__heading">Декаф Флэт Уайт</h3>
             <p class="card__text">Кофе без кофеина из Эфиопии<br>
@@ -389,7 +419,7 @@
         <div class="catalog__pagination pagination">
           <button class="pagination__button pagination__button--prev" type="button">
             <span class="pagination__button-text">Назад</span>
-            <svg class="pagination__button-image"  width="6" height="10" fill="currentColor">
+            <svg class="pagination__button-image" width="6" height="10" fill="currentColor">
               <use xlink:href="images/icons/stack.svg#paginationbutton"></use>
             </svg>
           </button>
@@ -406,7 +436,7 @@
           </ol>
           <button class="pagination__button pagination__button--next" type="button">
             <span class="pagination__button-text">Вперед</span>
-            <svg class="pagination__button-image"  width="6" height="10" fill="currentColor">
+            <svg class="pagination__button-image" width="6" height="10" fill="currentColor">
               <use xlink:href="images/icons/stack.svg#paginationbutton"></use>
             </svg>
           </button>
@@ -418,12 +448,15 @@
         <h2 class="visually-hidden">Карта расположения офиса</h2>
         <div class="map__image">
           <picture>
-            <source type="image/webp"  srcset="images/map/map-desktop@1x.webp 1x, images/map/map-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="images/map/map-tablet@1x.webp 1x, images/map/map-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="images/map/map-desktop@1x.webp 1x, images/map/map-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="images/map/map-tablet@1x.webp 1x, images/map/map-tablet@2x.webp 2x">
             <source type="image/webp" srcset="images/map/map@1x.webp 1x, images/map/map@2x.webp 2x">
 
-            <source media="(min-width: 1440px)" srcset="images/map/map-desktop@1x.png 1x, images/map/map-desktop@2x.png 2x">
-            <source media="(min-width: 768px)" srcset="images/map/map-tablet@1x.png 1x, images/map/map-tablet@2x.png 2x">
+            <source media="(min-width: 1440px)"
+              srcset="images/map/map-desktop@1x.png 1x, images/map/map-desktop@2x.png 2x">
+            <source media="(min-width: 768px)"
+              srcset="images/map/map-tablet@1x.png 1x, images/map/map-tablet@2x.png 2x">
             <img src="images/map/map@1x.png" srcset="images/map/map@2x.png 2x" alt="Карта расположения офиса">
           </picture>
         </div>
@@ -519,4 +552,5 @@
   <script src="vendor/leaflet/leaflet.js"></script>
   <script src="scripts/index.js" type="module"></script>
 </body>
+
 </html>
